2005-12-30  0.9.41 Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/config-gnome.c (config_get_string, config_get_int):
	Set the default_used flag in all code paths.

2005-12-29  Stephen Jacob <sj@sjacob.org>
	* pioneers.spec.in: Added the new icons and desktop files

2005-12-25  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/guic, common/network.c, common/state.c, common/state.h,
	common/gtk/config-gnome.c, editor/gtk/editor.c, server/player.c,
	server/pregame.c, server/gtk/main.c: make reindent
	
2005-12-21  0.9.40  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, pioneers.nsi.in: Windows installer script.
	(nsis.sf.net)
	* client/gtk/Makefile.am, meta-server/Makefile.am: Added extra include
	for driver.o (needed for Fink port, based on the patch by Tristan
	Thiede)
	* configure.ac, client/gtk/data/Makefile.am, editor/gtk/Makefile.am,
	server/gtk/Makefile.am: Configurable SVG renderer.
	* .cvsignore: Ignore pioneers.nsi.
	* client/gt/data/pioneers.ico: Updated to match the icons of 0.9.38.
	* editor/gtk/Makefile.am, editor/gtk/pioneers-editor.ico,
	editor/gtk/pioneers-editor.rc: Windows icon for the editor.
	* NEWS: Updated for the release
	
2005-12-18  0.9.39  Roland Clobus <rclobus@bigfoot.com>
	* client/common/callback.c, client/gtk/interface.c: Fixed a crash when
	a robber could be placed in a game with more than six players.
	* common/network.h, common/state.c, common/state.h, server/player.c,
	server/pregame.c, server/server.h: Allow many connections to the
	server at once.

2005-12-11  0.9.38  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/Makefile.am, client/gtk/gui.c,
	client/gtk/data/Makefile.am, client/gtk/data/pioneers.desktop,
	editor/gtk/Makefile.am, editor/gtk/editor.c,
	editor/gtk/pioneers-editor.desktop, server/gtk/Makefile.am,
	server/gtk/main.c, server/gtk/pioneer-server.desktop: Use the new
	icons (automatically rendered from the svg files from 0.9.37)
	* client/gtk/data/.cvsignore, editor/gtk/.cvsignore,