@@ -1,0 +1,10 @@
+scaling                 = always
+hill-tile		= hill.png
+field-tile		= field.png
+mountain-tile	        = mountain.png
+pasture-tile	        = pasture.png
+forest-tile		= forest.png
+gold-tile 		= gold.png
+desert-tile		= desert.png
+sea-tile		= sea.png
+board-tile		= board.png
