@@ -1,3 +1,6 @@
+2005-12-30  Brian Wellington <bwelling@xbill.org>
+	* Add theme based on Battle of Wesnoth artwork (patch from Phil Ezolt).
+
 2005-12-30  0.9.41 Roland Clobus <rclobus@bigfoot.com>
 	* common/gtk/config-gnome.c (config_get_string, config_get_int):
 	Set the default_used flag in all code paths.
